Update 4.0.0 (#1056)